--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <h1>Olá mundo! HELLO WORLD!</h1>
     <button>Clique aqui</button>
+    <p>Linha adicionada</p>
 
     <script src="script.js"></script>
 </body>
