--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <button>Clique aqui</button>
     <p>Linha adicionada</p>
 
+    <div>
+        <h3>Atualização 2.0</h3>
+        <p>Att com sucesso! 13:54</p>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
