adicionando um paragrafo na att 4.0

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 
     <div>
         <h2>Atualização 4.0</h2>
+        <p>atualizacao legal</p>
     </div>
+
+
 
     <script src="script.js"></script>
 </body>
