add paragrafo na atualizacao 4.0

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     <div>
         <h2>Atualização 4.0</h2>
-        <p>atualizacao legal</p>
+        <p>atualizacao legal</p> 
+        <p>Avalie a nossa atualizacao</p>
     </div>
 
 
